--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-		link rel="icon" href="http://bouzaslab25.com/favicon-16x16.png">
+		link rel="icon" href="http://adrifelcha.github.io/favicon-16x16.png">
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
