--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,7 @@
 			</nav>
 			
 			<header>
-      <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+      <h1 class="project-name">Adrifelcha's site</h1>
     			</header>
 			
 			<div class="container">
