--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 			header {
     				padding: 3em;
     				color: white;
-    				background: linear-gradient(to bottom right, #086A87, #000000);
+    				background: linear-gradient(to bottom right, #A901DB, #000000);
     				clear: left;
     				text-align: center;
     				border: 1px solid gray;
@@ -28,7 +28,7 @@
 			</nav>
 			
 			<header>
-      <h1 class="project-name">Adrifelcha's site</h1>
+      <h1 class="project-name">{{ page.title }}</h1>
     			</header>
 			
 			<div class="container">
