--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,13 @@
 		
 		<style>
 			header {
-    				padding: 3em;
+    				width: 100%;
+				padding: 1.5em;
     				color: white;
-    				background: linear-gradient(to bottom right, #A901DB, #000000);
-    				clear: left;
+    				background-color: #000000;
     				text-align: center;
     				border: 1px solid gray;
+			}
 			
 			</style>
 		</head>
