--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,9 @@
 		
 		<style>
 			header {
-    				width: 100%;
-				padding: 1em;
+    				padding: 1em;
     				color: white;
-    				background-color: #000000;
+    				background-color: black;
     				text-align: center;
     				border: 1px solid gray;
 			}
