--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,22 @@
     				color: white;
     				background-color: black;
     				text-align: center;
+    				border: 3px solid gray;
+			}
+		
+			footer {
+    				padding: 2em;
+    				color: white;
+    				background: linear-gradient(to bottom, #086A87, #000000);
+    				clear: left;
     				border: 1px solid gray;
+    				text-align: center;
+			}
+			
+			body {
+ 				margin: 60px auto;
+    				width: 70%;
+				background-color: red;
 			}
 			
 			</style>
