--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     				background-color: black;
     				text-align: center;
     				border: 3px solid gray;
+				width: 100%;
 			}
 		
 			footer {
@@ -26,8 +27,8 @@
 			
 			body {
  				margin: 60px auto;
-    				width: 70%;
-				background-color: red;
+    				width: 80%;
+				background-color: #E0E0F8;
 			}
 			
 			</style>
