--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,14 +12,14 @@
     				color: white;
     				background-color: black;
     				text-align: center;
-    				border: 3px solid gray;
-				width: 100%;
+    				border: 3px solid white;
+				width: 90%;
 			}
 		
 			footer {
-    				padding: 2em;
+    				padding: 1em;
     				color: white;
-    				background: linear-gradient(to bottom, #086A87, #000000);
+    				background-color: black;
     				clear: left;
     				border: 1px solid gray;
     				text-align: center;
@@ -27,8 +27,7 @@
 			
 			body {
  				margin: 60px auto;
-    				width: 80%;
-				background-color: #E0E0F8;
+    				width: 100%;
 			}
 			
 			</style>
