--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,11 @@
 	<html>
 		<head>
 		<link rel="icon" href="http://adrifelcha.github.io/BlackBunny.png">
+		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	  	<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="http://www.w3schools.com/w3css/4/w3.css">
 			<title>{{ page.title }}</title>
-			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
-		
+				
 		<style>
 			header {
     				padding: 1em;
