--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,10 @@
     				color: white;
     				background-color: black;
     				text-align: center;
-    				border: 3px solid white;
+    				border: 3px double white;
 				width: 90%;
+				border-top-right-radius: 25px;
+				border-bottom-right-radius: 25px;
 			}
 		
 			footer {
