--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,9 @@
     				background-color: black;
     				text-align: center;
     				border: 3px double white;
-				width: 90%;
-				border-top-right-radius: 25px;
-				border-bottom-right-radius: 25px;
+				width: 70%;
+				border-top-right-radius: 50px;
+				border-bottom-right-radius: 50px;
 			}
 		
 			footer {
@@ -24,7 +24,7 @@
     				color: white;
     				background-color: black;
     				clear: left;
-    				border: 1px solid gray;
+    				border: 1px dotted white;
     				text-align: center;
 			}
 			
