--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,20 @@
     				width: 100%;
 			}
 			
+			nav ul, footer ul {
+    				font-family:'Couries New', 'Courier', 'monospace';
+    				padding: 20px;
+    				font-size:1.2em;
+    				list-style: none;
+    				text-align:center;
+			}
+
+			nav ul li, footer ul li {
+    				display: inline;
+    				margin-right: 30px;
+    				margin-left: 30px; 
+			}
+			
 			</style>
 		</head>
 		<body>
