--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,11 +43,10 @@
 			}
 			
 			nav ul, footer ul {
-    				font-family:'Couries New', 'Courier', 'monospace';
-    				padding: 20px;
-    				font-size:1.2em;
+    				padding: 80px;
+    				font-size:1.7em;
     				list-style: none;
-    				text-align:center;
+    				text-align:left;
 			}
 
 			nav ul li, footer ul li {
