--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 			}
 			
 			header.style2 {
-    				padding: 1em;
+    				padding: 10px;
     				color: white;
     				background-color: black;
     				text-align: center;
