--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,12 +18,12 @@
 			}
 			
 			header.style2 {
-    				padding: 10px;
+    				padding: 0.5em;
     				color: white;
     				background-color: black;
     				text-align: center;
     				border: 3px double white;
-				width: 70%;
+				width: 40%;
 				border-top-right-radius: 50px;
 				border-bottom-right-radius: 50px;
 			}
