--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
 			}
 			
 			nav ul, footer ul {
-    				padding: 10px;
+    				padding: 0.2em;
     				font-size:1.7em;
     				list-style: none;
     				text-align:left;
@@ -70,6 +70,8 @@
 			<header class=style1>
       <h1 class="project-name">Adriana F. Chávez</h1>
     			</header>
+			
+			<br> <br>
 			
 			<header class=style2>
       <h1 class="project-name">{{ page.title }}</h1>
