--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,10 @@
 			
 			header.style2 {
     				padding: 0.5em;
-    				color: white;
-    				background-color: black;
+    				color: black;
+    				background-color: yellow;
     				text-align: center;
-    				border: 3px double white;
+    				border: 3px double black;
 				width: 40%;
 				border-top-right-radius: 50px;
 				border-bottom-right-radius: 50px;
@@ -43,7 +43,6 @@
 			}
 			
 			nav ul, footer ul {
-    				padding: 0.2em;
     				font-size:1.7em;
     				list-style: none;
     				text-align:left;
