--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,12 +58,15 @@
 		</head>
 		<body>
 			<nav>
-	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">My work</a></li>
-	        		<li><a href="/blog">Blog</a></li>
-	    		</ul>
+<div class="w3-container">
+<h2>Button Bars</h2>
+<p>Buttons can be grouped together in a horizontal bar using the <strong>w3-bar</strong> class:</p>
+<div class="w3-bar">
+  <button class="w3-button w3-black">Button</button>
+  <button class="w3-button w3-teal">Button</button>
+  <button class="w3-button w3-red">Button</button>
+</div>
+</div>
 			</nav>
 			
 			<header class=style1>
