--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
 			}
 			
 			body {
- 				margin: 60px auto;
+ 				margin: 10px auto;
     				width: 100%;
 			}
 			
@@ -68,7 +68,7 @@
 			</nav>
 			
 			<header class=style1>
-      <h1 class="project-name">Adriana F. Chávez</h1>
+      <h1 class="project-name">Adriana F. Chávez :)</h1>
     			</header>
 			
 			<br> <br>
