--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,8 +42,12 @@
     				width: 100%;
 			}
 			
+			nav {
+				padding: 10px;
+			}
+			
 			nav ul, footer ul {
-    				font-size:1.2em;
+				font-size:1.2em;
     				list-style: none;
     				text-align:left;
 			}
@@ -68,7 +72,8 @@
 			</nav>
 			
 			<header class=style1>
-      <h1 class="project-name">Adriana F. Chávez :)</h1>
+      <h1>Adriana F. Chávez</h1>
+      <h2>Welcome to my GiHub Page! </h2> 
     			</header>
 			
 			<br> <br>
