--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
     				color: black;
     				background-color: yellow;
     				text-align: center;
-    				border: 3px double black;
+    				border: 3px solid black;
 				width: 40%;
 				border-top-right-radius: 50px;
 				border-bottom-right-radius: 50px;
