--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-		<link rel="icon" href="http://adrifelcha.github.io/BlackBunny.png">
 		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	  	<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="http://www.w3schools.com/w3css/4/w3.css">
-		<meta charset="UTF-8">
+		<title>{{ page.title }}</title>
+		<link rel="icon" href="http://adrifelcha.github.io/BlackBunny.png">
 			<title>{{ page.title }}</title>
 				
 		<style>
@@ -72,7 +72,7 @@
 			
 			<header class=style1>
       <h1>Adriana F. Chávez</h1>
-      <h2>Welcome to my GiHub Page! </h2> 
+      <h2>My very own GiHub Page! </h2> 
     			</header>
 			
 			<br> <br>
