--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     				border: 3px dotted white;
 				width: 100;
 			}
-			
+							
 			header.style2 {
     				padding: 0.5em;
     				color: black;
@@ -58,6 +58,11 @@
     				display: inline;
     				margin-right: 30px;
     				margin-left: 30px; 
+			}
+			
+			div.container {
+  				   width: 30%;
+    				   border: 1px solid gray;
 			}
 			
 			</style>
