--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 		<head>
 		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="http://www.w3schools.com/w3css/4/w3.css">
+		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		<title>{{ page.title }}</title>
 		<link rel="icon" href="http://adrifelcha.github.io/BlackBunny.png">
 			<title>{{ page.title }}</title>
@@ -79,6 +79,13 @@
       <h1>Adriana F. Chávez</h1>
       <h2>My very own GiHub Page! </h2> 
     			</header>
+			
+			<div class="w3-container">
+  <h2>Buttons (w3-button)</h2>
+  <input type="button" class="w3-button w3-black" value="Input Button">
+  <button class="w3-button w3-black">Button Button</button>
+  <a href="#" class="w3-button w3-black">Link Button</a>
+</div>
 			
 			<br> <br>
 			
