--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,19 +79,19 @@
       <h1>Adriana F. Chávez</h1>
       <h2>My very own GiHub Page! </h2> 
     			</header>
+								
+			<br> <br>
+			
+			<center><header class=style2>
+      <h1 class="project-name">{{ page.title }}</h1>
+    			</header>
 			
 			<div class="w3-container">
   <h2>Buttons (w3-button)</h2>
   <input type="button" class="w3-button w3-black" value="Input Button">
   <button class="w3-button w3-black">Button Button</button>
   <a href="#" class="w3-button w3-black">Link Button</a>
-</div>
-			
-			<br> <br>
-			
-			<header class=style2>
-      <h1 class="project-name">{{ page.title }}</h1>
-    			</header>
+				</div> </center>
 			
 			<div class="container">
 			
