--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,13 +91,14 @@
   <input type="button" class="w3-button w3-black" value="Input Button">
   <button class="w3-button w3-black">Button Button</button>
   <a href="#" class="w3-button w3-black">Link Button</a>
-				</div> </center>
+				</div> 
 			
 			<div class="container">
 			
 			{{ content }}
 			
 			</div><!-- /.container -->
+			</center>
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:adrifelcha@gmail.com">email</a></li>
