--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,13 +92,15 @@
   <button class="w3-button w3-black">Button Button</button>
   <a href="#" class="w3-button w3-black">Link Button</a>
 				</div> 
+				
+				</center>
 			
-			<div class="container">
+			<div class="container" align="center">
 			
 			{{ content }}
 			
 			</div><!-- /.container -->
-			</center>
+			
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:adrifelcha@gmail.com">email</a></li>
