--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,9 +69,9 @@
 		</head>
 		<body>
 			<nav>
-				<a href="inicioApps.html" class="w3-btn w3-light-blue w3-button w3-xlarge w3-round-large w3-hover-dark-grey"><i class="fa fa-graduation-cap" aria-hidden="true"></i> OOOOO <i class="fa fa-graduation-cap" aria-hidden="true"></i></a>
-				<a href="http://github.com/BouzasLab25/LabVirtual25/zipball/master" class="w3-btn w3-light-blue w3-button w3-hover-dark-grey w3-xlarge w3-round-large">Códigos (.zip) <i class="fa fa-download" aria-hidden="true"></i></a>	 
-			        <a href="{{ site.github.repository_url }}" target="_blank" class="w3-btn w3-light-blue w3-button w3-xlarge w3-hover-dark-grey w3-round-large"><i class="fa fa-github"></i> Ver Repositorio <i class="fa fa-github"></i></a>
+				<a href="#"w3-btn w3-light-blue w3-button w3-xlarge w3-round-large w3-hover-dark-grey"><i class="fa fa-graduation-cap" aria-hidden="true"></i> About Me <i class="fa fa-graduation-cap" aria-hidden="true"></i></a>
+				<a href="#" class="w3-btn w3-light-blue w3-button w3-hover-dark-grey w3-xlarge w3-round-large"> My Work <i class="fa fa-download" aria-hidden="true"></i></a>	 
+			        <a href="#" target="_blank" class="w3-btn w3-light-blue w3-button w3-xlarge w3-hover-dark-grey w3-round-large"><i class="fa fa-github"></i> Personal Blog <i class="fa fa-github"></i></a>
 	
 			</nav>
 			
