--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		<title>{{ page.title }}</title>
-		<link rel="icon" href="http://adrifelcha.github.io/BlackBunny.png">
+		<link rel="icon" href="https://adrifelcha.github.io/BlackBunny.png">
 			<title>{{ page.title }}</title>
 				
 		<style>
