--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,8 +61,10 @@
 			}
 			
 			div.container {
-  				   width: 30%;
+  				   width: 70%;
     				   border: 1px solid gray;
+				   margin-left: 30px;
+				   background-color: purple;
 			}
 			
 			</style>
