--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,8 +63,8 @@
 			div.container {
   				   width: 70%;
     				   border: 1px solid gray;
-				   margin-left: 30px;
-				   background-color: purple;
+				   margin-left: 200px;
+				   background-color: pink;
 			}
 			
 			</style>
