--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,6 +87,8 @@
 			<center><header class=style2>
       <h1 class="project-name">{{ page.title }}</h1>
     			</header>
+				
+			<br><br>
 			
 			<div class="w3-container">
  				  <input type="button" class="w3-button w3-black" value="Input Button">
@@ -94,9 +96,9 @@
   				  <a href="#" class="w3-button w3-black">Link Button</a>
 			</div> 
 				
-				</center>
+			</center>
 			
-			<div class="container" align="center">
+			<div class="container">
 			
 			{{ content }}
 			
