--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,8 @@
 			div.container {
   				   width: 70%;
     				   border: 1px solid gray;
-				   margin-left: 200px;
+				   margin-right: auto;
+    				   margin-left: auto;
 				   background-color: pink;
 			}
 			
