--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,7 +76,7 @@
 				<a href="/about" class="w3-btn w3-blue w3-button w3-xlarge w3-round-large w3-hover-dark-grey"> About Me <i class="fa fa-coffee" aria-hidden="true"></i></a>
 				<a href="#" class="w3-btn w3-red w3-button w3-hover-dark-grey w3-xlarge w3-round-large"> My Work </a>	 
 			        <a href="#" target="_blank" class="w3-btn w3-green w3-button w3-xlarge w3-hover-dark-grey w3-round-large">Personal Blog <i class="fa fa-heart-o" aria-hidden="true"></i></a>
-				<a href="#" target="_blank" class="w3-btn w3-purple w3-button w3-xlarge w3-hover-dark-grey w3-round-large"> Updates / Events</a>
+				<a href="#" target="_blank" class="w3-btn w3-purple w3-button w3-xlarge w3-hover-dark-grey w3-round-large"> Updates / Events <i class="fa fa-bell" aria-hidden="true"></i></a>
 	
 			</nav>
 			
