--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,10 @@
 				width: 40%;
 				border-top-right-radius: 50px;
 				border-bottom-right-radius: 50px;
+				border-top-left-radius: 80px;
+				border-bottom-left-radius: 80px;
+				margin-right: auto;
+    				margin-left: auto;
 			}
 		
 			footer {
