--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,10 +67,10 @@
 			
 			div.container {
   				   width: 70%;
-    				   border: 1px solid gray;
+    				   border: 3px solid black;
 				   margin-right: auto;
     				   margin-left: auto;
-				   background-color: pink;
+				   background-color: #E6E6E6;
 			}
 			
 			</style>
@@ -113,7 +113,7 @@
 			
 			</div>
 			
-			
+			<br><br>
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:adrifelcha@gmail.com">email</a></li>
