--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,7 +81,7 @@
 				<a href="/about" class="w3-btn w3-blue w3-button w3-border w3-border-black w3-xlarge w3-round-large w3-hover-dark-grey"> About Me <i class="fa fa-coffee" aria-hidden="true"></i></a>
 				<a href="/CV" class="w3-btn w3-red w3-button w3-border w3-border-black w3-hover-dark-grey w3-xlarge w3-round-large"> My Work <i class="fa fa-cubes" aria-hidden="true"></i></a>	 
 			        <a href="/blog" class="w3-btn w3-border w3-border-black w3-green w3-button w3-xlarge w3-hover-dark-grey w3-round-large">Personal Blog <i class="fa fa-heart-o" aria-hidden="true"></i></a>
-				<a href="#" class="w3-btn w3-border w3-disabled w3-border-black w3-purple w3-button w3-xlarge w3-hover-dark-grey w3-round-large"><i class="fa fa-bullhorn" aria-hidden="true"></i> Updates / Events <i class="fa fa-bell" aria-hidden="true"></i></a>
+				<a href="#" class="w3-btn w3-border w3-border-black w3-purple w3-button w3-xlarge w3-hover-dark-grey w3-round-large" disabled><i class="fa fa-bullhorn" aria-hidden="true"></i> Updates / Events <i class="fa fa-bell" aria-hidden="true"></i></a>
 	
 			</nav>
 			
