--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,13 +45,13 @@
 			body {
  				margin-top: 10px auto;
     				width: 100%;
-				background-color: white;
+				background-color: #E6E6E6;
 			}
 			
 			nav {
 				padding: 10px;
 				text-align:right;
-				background-color: #A4A4A4;
+				background-color: white;
 			}
 			
 			nav ul, footer ul {
