--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,8 +62,8 @@
 
 			nav ul li, footer ul li {
     				display: inline;
-    				margin-right: 30px;
-    				margin-left: 30px; 
+    				margin-right: 50px;
+    				margin-left: 350px; 
 			}
 			
 			div.container {
@@ -108,8 +108,8 @@
 			<br><br>
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:adrifelcha@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/Adrifelcha">github.com/Adrifelcha</a></li>
+	        		<li><a href="mailto:adrifelcha@gmail.com">email <i class="fa fa-envelope-square" aria-hidden="true"></i></a></li>
+	        		<li><a href="https://github.com/Adrifelcha">github.com/Adrifelcha <i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
 				</ul>
 			</footer>
 		</body>
