--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
 			nav {
 				padding: 10px;
 				text-align:right;
-				background-color: white;
+				background-color: #E6E6E6;
 			}
 			
 			nav ul, footer ul {
