--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,6 +93,7 @@
 								
 			<br> <br>
 			
+			<center>
 			<div class="w3-container">
  				  <input type="button" class="w3-button w3-black" value="Input Button">
   				  <button class="w3-button w3-black">Button Button</button>
