--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -108,10 +108,8 @@
 			
 			<br><br>
 			<footer>
-	    		<ul>
-	        		<li><a href="mailto:adrifelcha@gmail.com">email <i class="fa fa-envelope-square" aria-hidden="true"></i></a></li>
-	        		<li><a href="https://github.com/Adrifelcha">github.com/Adrifelcha <i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
-				</ul>
+	    		<a href="mailto:adrifelcha@gmail.com"><i class="fa fa-envelope-square" aria-hidden="true"> adrifelcha@gmail.com <i class="fa fa-envelope-square" aria-hidden="true"></i></a>
+	        	<a href="https://github.com/Adrifelcha"> <i class="fa fa-github-alt" aria-hidden="true"></i> github.com/Adrifelcha <i class="fa fa-github-alt" aria-hidden="true"></i></a>
 			</footer>
 		</body>
 	</html>
