--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
 		</head>
 		<body>
 			<nav>
-				<a href="https://adrifelcha.github.io" class="w3-btn w3-dark-grey w3-button w3-border w3-border-black w3-xlarge w3-round-large w3-hover-dark-grey">Home <i class="fa fa-home" aria-hidden="true"></i></a>
+				<a href="https://adrifelcha.github.io" class="w3-btn w3-dark-grey w3-border w3-border-black w3-xlarge w3-round-large w3-hover-amber">Home <i class="fa fa-home" aria-hidden="true"></i></a>
 				<a href="/about" class="w3-btn w3-dark-grey w3-button w3-border w3-border-black w3-xlarge w3-round-large w3-hover-dark-grey"> About Me <i class="fa fa-coffee" aria-hidden="true"></i></a>
 				<a href="/cv" class="w3-btn w3-dark-grey w3-button w3-border w3-border-black w3-hover-dark-grey w3-xlarge w3-round-large"> My Work <i class="fa fa-cubes" aria-hidden="true"></i></a>	 
 			        <a href="/blog" class="w3-btn w3-border w3-border-black w3-dark-grey w3-button w3-xlarge w3-hover-dark-grey w3-round-large">Personal Blog <i class="fa fa-heart-o" aria-hidden="true"></i></a>
