--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,8 +45,8 @@
 			body {
  				margin-top: 10px auto;
     				width: 100%;
-				background-color: #A4A4A4;
-			}
+				background-color: #F2F2F2;
+				}
 			
 			nav {
 				padding: 10px;
