--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
 			nav {
 				padding: 10px;
 				text-align:right;
-				background-color: #A4A4A4;
+				background-color: #F2F2F2;
 			}
 			
 			nav ul, footer ul {
