--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,11 +79,11 @@
 		</head>
 		<body>
 			<nav>
-				<a href="https://adrifelcha.github.io" class="w3-btn w3-dark-grey w3-border w3-border-black w3-large w3-round-large w3-hover-amber">Home <i class="fa fa-home" aria-hidden="true"></i></a>
-				<a href="/about" class="w3-btn w3-dark-grey w3-border w3-border-black w3-large w3-round-large w3-hover-red"> About Me <i class="fa fa-coffee" aria-hidden="true"></i></a>
-				<a href="/cv" class="w3-btn w3-dark-grey w3-button w3-border w3-border-black w3-hover-indigo w3-xarge w3-round-large"> My Work <i class="fa fa-cubes" aria-hidden="true"></i></a>	 
-			        <a href="/blog" class="w3-btn w3-border w3-border-black w3-dark-grey w3-button w3-large w3-hover-light-green w3-round-large">Personal Blog <i class="fa fa-heart-o" aria-hidden="true"></i></a>
-				<a href="#" class="w3-btn w3-disabled w3-border w3-border-black w3-dark-grey w3-button w3-large w3-hover-pink w3-round-large"><i class="fa fa-bullhorn" aria-hidden="true"></i> Updates / Events <i class="fa fa-bell" aria-hidden="true"></i></a>
+				<a href="https://adrifelcha.github.io" class="w3-btn w3-black w3-border w3-border-black w3-large w3-round-large w3-hover-amber">Home <i class="fa fa-home" aria-hidden="true"></i></a>
+				<a href="/about" class="w3-btn w3-black w3-border w3-border-black w3-large w3-round-large w3-hover-red"> About Me <i class="fa fa-coffee" aria-hidden="true"></i></a>
+				<a href="/cv" class="w3-btn w3-black w3-button w3-border w3-border-black w3-hover-indigo w3-xarge w3-round-large"> My Work <i class="fa fa-cubes" aria-hidden="true"></i></a>	 
+			        <a href="/blog" class="w3-btn w3-border w3-border-black w3-black w3-button w3-large w3-hover-light-green w3-round-large">Personal Blog <i class="fa fa-heart-o" aria-hidden="true"></i></a>
+				<a href="#" class="w3-btn w3-disabled w3-border w3-border-black w3-black w3-button w3-large w3-hover-pink w3-round-large"><i class="fa fa-bullhorn" aria-hidden="true"></i> Updates / Events <i class="fa fa-bell" aria-hidden="true"></i></a>
 	
 			</nav>
 			
