--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
 			body {
  				margin-top: 10px auto;
     				width: 100%;
-				background-color: #F2F2F2;
+				background="color_dots_wallpaper.png";
 				}
 			
 			nav {
