--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,8 @@
 			body {
  				margin-top: 10px auto;
     				width: 100%;
-				background: "color_dots_wallpaper.png";
+				background-image: https://github.com/Adrifelcha/adrifelcha.github.io("color_dots_wallpaper.png");
+   				background-color: #cccccc;
 				}
 			
 			nav {
