--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,9 +45,8 @@
 			body {
  				margin-top: 10px auto;
     				width: 100%;
-				background-image: https://github.com/Adrifelcha/adrifelcha.github.io("color_dots_wallpaper.png");
-   				background-color: #cccccc;
-				}
+				background-image: radial-gradient(#cccccc,  #F2F2F2);
+   			}
 			
 			nav {
 				padding: 10px;
