--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,7 +76,7 @@
 			
 			
 		</head>
-		<body background="color_dots_wallpaper.png">
+		<body background="fondo_pages.png">
 			<nav>
 				<a href="https://adrifelcha.github.io" class="w3-btn w3-black w3-border w3-border-black w3-large w3-round-large w3-hover-amber">Home <i class="fa fa-home" aria-hidden="true"></i></a>
 				<a href="/about" class="w3-btn w3-black w3-border w3-border-black w3-large w3-round-large w3-hover-red"> About Me <i class="fa fa-coffee" aria-hidden="true"></i></a>
