--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,7 @@
 			
 		</head>
 		<body background="fondo_pages.png">
-			<nav>
+			<nav background="fondo_nav.png">
 				<a href="https://adrifelcha.github.io" class="w3-btn w3-black w3-border w3-border-black w3-large w3-round-large w3-hover-amber">Home <i class="fa fa-home" aria-hidden="true"></i></a>
 				<a href="/about" class="w3-btn w3-black w3-border w3-border-black w3-large w3-round-large w3-hover-red"> About Me <i class="fa fa-coffee" aria-hidden="true"></i></a>
 				<a href="/cv" class="w3-btn w3-black w3-button w3-border w3-border-black w3-hover-indigo w3-xarge w3-round-large"> My Work <i class="fa fa-cubes" aria-hidden="true"></i></a>	 
