--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,6 +73,19 @@
     				   margin-left: auto;
 				   background-color: #E6E6E6;
 			}
+		
+			.column {
+    				float: left;
+    				width: 50%;
+    				padding: 10px;
+    				height: 300px; /* Should be removed. Only for demonstration */
+			}
+
+			.row:after {
+    				content: "";
+    				display: table;
+    				clear: both;
+			}
 			</style>
 			
 			
