--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,8 +50,7 @@
 			nav {
 				padding: 10px;
 				text-align:right;
-				background="fondo_nav.png";
-				background-color: #F2F2F2;
+				background-color: #cccccc;
 			}
 			
 			nav ul, footer ul {
