--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
 			nav {
 				padding: 10px;
 				text-align:right;
-				background-color: #cccccc;
+				background-color: #A4A4A4;
 			}
 			
 			nav ul, footer ul {
