--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,7 +101,7 @@
 			
 			<header class=style1>
       <h1>Adriana F. Chávez</h1>
-      <h2>Welcome to my personal GitHub page!</h2> 
+      <h2>My personal GitHub page!</h2> 
     			</header>
 								
 			<br> <br>
