--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,12 @@
     				border: 3px dotted white;
 				width: 100;
 			}
+		
+		img.displayed {
+    				display: block;
+    				margin-left: auto;
+    				margin-right: auto;
+			    }
 							
 			header.style2 {
     				padding: 0.5em;
