--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,6 +77,7 @@
 				   margin-right: auto;
     				   margin-left: auto;
 				   background-color: #E6E6E6;
+				   padding: 16px;
 			}
 		
 			.column {
