--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -121,7 +121,7 @@
 			
 			<br><br>
 			<footer>
-	    		<a href="mailto:adrifelcha@gmail.com"><i class="fa fa-envelope-square" aria-hidden="true"> adrifelcha@gmail.com <i class="fa fa-envelope-square" aria-hidden="true"></i></a>
+	    		||| <a href="mailto:adrifelcha@gmail.com"><i class="fa fa-envelope-square" aria-hidden="true"> adrifelcha@gmail.com <i class="fa fa-envelope-square" aria-hidden="true"></i></a> |||
 	        	<a href="https://github.com/Adrifelcha"> <i class="fa fa-github-alt" aria-hidden="true"></i> github.com/Adrifelcha <i class="fa fa-github-alt" aria-hidden="true"></i></a>
 			</footer>
 		</body>
