--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,9 +5,9 @@ comments: true
 
 <div class="notes">
 		<div class="note single">
-			<h1 class="title">{{ page.title }}</h1>
+			<h1 class="title" style="text-align:center;">{{ page.title }}</h1>
 			
-			<h2 class="date"><info datetime="{{ page.date }}">
+			<h2 class="date" style="text-align:right"><info datetime="{{ page.date }}">
 				{{ page.date | date_to_string }} {% if page.author %} by {{ page.author }} {% endif %}
 			</info></h2>
 			<!-- Post content -->
