--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ comments: true
 
 <div class="notes">
 		<div class="note single">
+			<div class="container">
 			<h1 class="title" style="text-align:center;">{{ page.title }}</h1>
 			
 			<h2 class="date" style="text-align:right"><info datetime="{{ page.date }}">
@@ -25,5 +26,5 @@ comments: true
 			<div class="notecomments">
 				{% include disqus.html %}	 
 			</div>
-		</div><!-- / .note .single -->
+			</div></div>
 </div><!-- /.notes -->
