--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ comments: true
 <div class="notes">
 		<div class="note single">
 			<div class="container" style="width:80%;">
-			<h1 class="title" style="text-align:center;">{{ page.title }}</h1>
+				<h1 class="title" style="text-align:center;"><b><u>{{ page.title }}</u></b></h1>
 			
 			<h2 class="date" style="text-align:right"><info datetime="{{ page.date }}">
 				{{ page.date | date_to_string }} {% if page.author %} by {{ page.author }} {% endif %}
