--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,7 +122,7 @@
 			<br><br>
 			<footer>
 	    		||| <a href="mailto:adrifelcha@gmail.com"> adrifelcha@gmail.com <i class="fa fa-envelope-square"></i></a> |||
-	        	<a href="https://github.com/Adrifelcha"> github.com/Adrifelcha <i class="fa fa-github-alt"></i></a>
+	        	<a href="https://github.com/Adrifelcha"> github.com/Adrifelcha <i class="fa fa-github-alt"></i></a> |||
 			</footer>
 		</body>
 	</html>
